kelvin: the pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<link rel='icon' href='demo/img/icon_3.png' type='image/x-icon'/ >
-	<title>OptiRev | Finance Dashboard</title>
+		<title>OptiRev | Finance Dashboard</title>
 
 		<!-- Vendor styles -->
 		<link rel="stylesheet" href="vendors/OwlCarousel/assets/owl.carousel.min.css">
@@ -54,8 +54,17 @@
                     </div>
                 </div>
 
-                <div class="header__logo hidden-sm-down">
-                    <h1><a href="index.html"><img class="the-logo" src="demo/img/logo-files/logo-white.png"></a></h1>
+				<div class="header__logo hidden-sm-down">
+					<a href="index.html"><img class="the-logo" src="demo/img/logo-files/fav-icon.png"></a>
+					<h1>
+						<a href="index.html" class="mb-3">OptiRev</a>
+						<p class="mb-0 text-white font-weight-light text-capitalize font-12px">Finance Dashboard</p>
+					</h1>
+				</div>
+
+                <div class="header__logo hidden-sm-down d-none">
+					
+                    <h1><a href="index.html"><img class="the-logo d-none" src="demo/img/logo-files/logo-white.png"></a></h1>
                 </div>
 
                 <form class="search">
@@ -223,7 +232,7 @@
                 </div>
             </aside>
 			
-			<div class="content--full map-main-container">
+			<div class="content--full map-main-container d-none">
 					<div class="col-12">
 						<header class="content__title px-0 border-0">
 				 	<div class="row">
@@ -262,8 +271,8 @@
 						</div>
 					</div>
 			</div>
-			 <section class="content dark-body pt-5">
-                <header class="content__title px-0 border-0 d-none">
+			 <section class="content dark-body">
+                <header class="content__title px-0 border-0 d-non">
 				 	<div class="row">
 						<div class="col-md-6 col-sm-12">
 							<span class="rev-title-container">
