--- a/landing-page.html
+++ b/landing-page.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel='icon' href='demo/img/icon_3.png' type='image/x-icon'/ >
-    <title>E-sconstruction Portal</title>
+    <title>OptiRev | Finance Dashboard</title>
 
     <!-- ==================Start Css Link===================== -->
     <!-- font awesome icon -->
@@ -55,7 +55,7 @@
             <div class="row bn-height align-items-center">
                 <div class="col-lg-8 col-xl-7">
                     <div class="banner-content fx">
-                        <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.6s"><strong>Nairobi Metropolitan Services</strong><span>NCCG Econstruction</span></h2>
+                        <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.6s"><strong>OptiRev</strong><span>Finance Dashboard</span></h2>
                         <div class="animation" data-animation="fadeInDown" data-animation-delay="0.6s">
                             <p>Login to continue</p>
                             
