--- a/index-daily.html
+++ b/index-daily.html
@@ -55,8 +55,12 @@
                 </div>
 
                 <div class="header__logo hidden-sm-down">
-                    <h1><a href="index.html"><img class="the-logo" src="demo/img/logo-files/logo-white.png"></a></h1>
-                </div>
+					<a href="index.html"><img class="the-logo" src="demo/img/logo-files/fav-icon.png"></a>
+					<h1>
+						<a href="index.html" class="mb-3">OptiRev</a>
+						<p class="mb-0 text-white font-weight-light text-capitalize font-12px">Finance Dashboard</p>
+					</h1>
+				</div>
 
                 <form class="search">
                     <div class="search__inner">
