kelvin: the map added

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
             </aside>
 			
-			<div class="content--full map-main-container d-none">
+			<div class="content--full map-main-container d-non">
 					<div class="col-12">
 						<header class="content__title px-0 border-0">
 				 	<div class="row">
@@ -271,7 +271,7 @@
 						</div>
 					</div>
 			</div>
-			 <section class="content dark-body">
+			 <section class="content dark-body pt-4">
                 <header class="content__title px-0 border-0 d-non">
 				 	<div class="row">
 						<div class="col-md-6 col-sm-12">
